errors.err
ex12.c: In function ‘desenha_transicoes’:
ex12.c:343:17: error: expected identifier before ‘for’
                 for(i=k;i<tr*2;i++)
                 ^
ex12.c:333:17: warning: variable ‘rc’ set but not used [-Wunused-but-set-variable]
     float xi,yi,rc,raio;
                 ^
ex12.c:333:14: warning: unused variable ‘yi’ [-Wunused-variable]
     float xi,yi,rc,raio;
              ^
ex12.c:333:11: warning: unused variable ‘xi’ [-Wunused-variable]
     float xi,yi,rc,raio;
           ^
ex12.c:332:15: warning: variable ‘k’ set but not used [-Wunused-but-set-variable]
     int i,c=0,k=1;
               ^
ex12.c:332:11: warning: unused variable ‘c’ [-Wunused-variable]
     int i,c=0,k=1;
           ^
ex12.c:330:33: warning: unused parameter ‘buff’ [-Wunused-parameter]
 void desenha_transicoes(BITMAP *buff, transicoes *p_transicoes)
                                 ^
